# MyTattoo

./: .gitignore  CMakeLists.txt  clean.sh
include/: utils.hpp
src/: main.cpp  utils.cpp
